--- a/app/globals.css
+++ b/app/globals.css
@@ -39,6 +39,8 @@ body,
     --ring: 222.2 84% 4.9%;
  
     --radius: 0.5rem;
+
+    --whatsappLightGreenBackground: 94 78% 87%;
   }
  
   .dark {
@@ -69,6 +71,8 @@ body,
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --whatsappLightGreenBackground: transparent;
   }
 }
  
